--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.37.0",
+    "@mistralai/mistralai": "^1.11.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "peerjs": "1.5.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@react-three/fiber": "^9.5.0",
-    "three": "^0.182.0",
-    "@google/genai": "^1.37.0",
-    "lucide-react": "^0.562.0",
-    "@react-three/drei": "^10.7.7",
-    "clsx": "^2.1.1",
-    "peerjs": "1.5.2"
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
