--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
         "start": "node index.js"
     },
     "dependencies": {
+        "express": "^4.18.2",
+        "cors": "^2.8.5",
         "peer": "^1.0.0"
     },
     "engines": {
