--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-three/fiber": "^9.5.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
-    "peerjs": "1.5.2",
+    "socket.io-client": "^4.7.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "three": "^0.182.0"
