--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "dependencies": {
         "express": "^4.18.2",
         "cors": "^2.8.5",
-        "peer": "^1.0.0"
+        "socket.io": "^4.7.4"
     },
     "engines": {
         "node": ">=16"
