--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "socket.io-client": "^4.7.4",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
