--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,12 @@
         "start": "node index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
+        "@google/generative-ai": "^0.24.1",
+        "@supabase/supabase-js": "^2.91.1",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^4.18.2",
+        "node-cron": "^4.2.1",
         "socket.io": "^4.7.4"
     },
     "engines": {
